@@ -5,7 +5,9 @@ Changelog
 3.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Do not break when plone.distribution is installed.
+  Fixes `issue 231 <https://github.com/4teamwork/ftw.upgrade/issues/231>`.
+  [ale-rt]
 
 
 3.3.1 (2022-07-08)
